--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "eas-cli": "^10.1.1",
     "expo": "~51.0.18",
     "expo-constants": "^16.0.2",
     "expo-device": "^6.0.2",
