--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eas-cli": "^10.1.1",
     "expo": "~51.0.18",
     "expo-constants": "^16.0.2",
+    "expo-dev-client": "^4.0.19",
     "expo-device": "^6.0.2",
     "expo-notifications": "^0.28.9",
     "expo-status-bar": "~1.12.1",
